--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,8 @@
 # Avoid your project being littered with annoying .DS_Store files!
 .DS_Store
 
-index.html
+indexx.html
 
-styles.css
+styless.css
 
 README-template.md
